--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 21
-          #cache: 'npm'
+          node-version: 20
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - name: Build
