--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,8 +51,9 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          node-version: 20
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          publish_dir: ./dist
