--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -54,6 +54,6 @@ jobs:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./dist
