--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -56,4 +56,5 @@ jobs:
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: $
           publish_dir: ./dist
