--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,13 +45,8 @@ jobs:
         with:
           # dist 디렉터리 업로드
           path: './dist'
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
+      # - name: Setup Pages
+      #   uses: actions/configure-pages@v5
       - name: Deploy to GitHub Pages
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
