--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,11 +40,11 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # dist 디렉터리 업로드
-          path: './dist'
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v1
+      #   with:
+      #     # dist 디렉터리 업로드
+      #     path: './dist'
       # - name: Setup Pages
       #   uses: actions/configure-pages@v5
       - name: Deploy to GitHub Pages
