--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -52,4 +52,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: $
-          publish_dir: ./dist/spa
+          publish_dir: /home/runner/work/pkmSleepCalc/pkmSleepCalc/dist
