--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,9 +47,11 @@ jobs:
       #     path: './dist'
       # - name: Setup Pages
       #   uses: actions/configure-pages@v5
+      - name: Print contents of dist directory
+        run: ls -la /home/runner/work/pkmSleepCalc/pkmSleepCalc/dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: $
-          publish_dir: /home/runner/work/pkmSleepCalc/pkmSleepCalc/dist
+          publish_dir: ./dist
