--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,5 +53,5 @@ jobs:
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: $
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist/spa
