--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pkmsleepcalc",
-  "version": "1.0.4",
-  "description": "당신의 포켓몬을 완벽 분석해드립니다.",
+  "version": "1.0.5",
+  "description": "당신의 포켓몬을 완벽 분석해드립니다",
   "productName": "포슬립 계산기",
   "author": "extraBottle",
   "private": true,
