--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pkmsleepcalc",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "당신의 포켓몬을 완벽 분석해드립니다",
-  "productName": "포슬립 계산기",
+  "productName": "포슬립 계산기 by 두번째유리병",
   "author": "extraBottle",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@gtm-support/vue-gtm": "^2.2.0",
     "@quasar/extras": "^1.16.4",
     "pinia": "^2.1.7",
     "quasar": "^2.8.0",
