--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           branch: main # Pushes the updates to the main branch.
           folder: fetch-api-data-action # The location of the data.json file saved by the Fetch API Data action.
-          target-folder: ./src/pkmJson # Saves the data into the 'data' directory on the main branch.
+          target-folder: ./src/pkmJson/sleepPkm # Saves the data into the 'data' directory on the main branch.
