--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkmsleepcalc",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "당신의 포켓몬을 완벽 분석해드립니다",
   "productName": "포슬립 계산기 by 두번째유리병",
   "author": "extraBottle",
@@ -19,7 +19,8 @@
     "quasar": "^2.8.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12",
-    "vue3-apexcharts": "^1.5.2"
+    "vue3-apexcharts": "^1.5.2",
+    "vue3-carousel": "^0.3.4"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.8.0",
