--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkmsleepcalc",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "당신의 포켓몬을 완벽 분석해드립니다",
   "productName": "포슬립 계산기 by 두번째유리병",
   "author": "extraBottle",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.8.0",
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.5.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
